--- a/doc/compilador.tex
+++ b/doc/compilador.tex
@@ -255,7 +255,7 @@ $\langle\text{constante}\rangle \rightarrow  \textbf{ConstInt} | \textbf{ConstRe
 
 
 
-
+\section*{Terceira Etapa}
 
 \begin{table}[H]
     \hspace{-3cm}
@@ -316,7 +316,12 @@ $\langle\text{constante}\rangle \rightarrow  \textbf{ConstInt} | \textbf{ConstRe
 \end{table}
 
 
+\subsection*{Grafos sintáticos}
 
+\begin{figure}[H]
+   \includegraphics[]{grafos_sintaticos/software.png}
+   \includegraphics[]{grafos_sintaticos/bloco.png}
+\end{figure}
 
 
 \end{document}
