adicionado Grafos sintáticos na documentação

--- a/doc/compilador.tex
+++ b/doc/compilador.tex
@@ -321,7 +321,83 @@ $\langle\text{constante}\rangle \rightarrow  \textbf{ConstInt} | \textbf{ConstRe
 \begin{figure}[H]
    \includegraphics[]{grafos_sintaticos/software.png}
    \includegraphics[]{grafos_sintaticos/bloco.png}
+   \includegraphics[]{grafos_sintaticos/conteudo_bloco.png}
+
+   \includegraphics[]{grafos_sintaticos/lista_variaveis.png}
+   \includegraphics[]{grafos_sintaticos/lista_comandos.png}
+   
 \end{figure}
+
+\newpage
+
+\begin{figure}[H]
+   \includegraphics[]{grafos_sintaticos/declaracao_de_variavel.png}
+
+   \includegraphics[]{grafos_sintaticos/comando.png}
+
+   \includegraphics[]{grafos_sintaticos/tipo.png}
+
+   \includegraphics[]{grafos_sintaticos/lista_ids.png}
+
+   \includegraphics[]{grafos_sintaticos/mais_de_um_id.png}
+
+   \includegraphics[scale=1.5]{grafos_sintaticos/cmd_selecao.png}
+
+
+
+  
+\end{figure}
+
+
+\newpage
+
+\begin{figure}[H]
+    \includegraphics[scale=2.5]{grafos_sintaticos/com_else.png}
+
+    \includegraphics[scale=2.5]{grafos_sintaticos/cmd_repeticao.png}
+
+    \includegraphics[scale=1.6]{grafos_sintaticos/cmd_repeticao_while.png}
+
+    \includegraphics[scale=1.3]{grafos_sintaticos/cmd_repeticao_do_until.png}
+
+    \includegraphics[scale=1.3]{grafos_sintaticos/cmd_atribuicao.png}
+
+    \includegraphics[scale=2.0]{grafos_sintaticos/condicao.png}
+
+    \includegraphics[scale=2.3]{grafos_sintaticos/condicao'.png}
+
+    
+\end{figure}
+
+
+\newpage
+
+\begin{figure}[H]
+    \includegraphics[scale=2.5]{grafos_sintaticos/operador_logico.png}
+
+   
+\end{figure}
+
+
+\newpage
+
+
+\begin{figure}[H]
+    \includegraphics[scale=2.0]{grafos_sintaticos/expressao.png}
+
+    \includegraphics[scale=2.0]{grafos_sintaticos/expressao'.png}
+
+    \includegraphics[scale=2.0]{grafos_sintaticos/operador_aritimetico.png}
+\end{figure}
+
+\newpage
+
+\begin{figure}[H]
+    \includegraphics[scale=2.0]{grafos_sintaticos/id_ou_constante.png}
+
+    \includegraphics[scale=2.0]{grafos_sintaticos/constante.png}
+\end{figure}
+
 
 
 \end{document}
